--- a/src/main/asciidoc/webfx-docs.adoc
+++ b/src/main/asciidoc/webfx-docs.adoc
@@ -72,7 +72,7 @@ The WebFX kit coverage is for now limited to the essential features of JavaFX. S
 
 When a JavaFX application meets these 2 requirements, we will call it a _WebFX application_, and it can be transpiled to the web simply by running a GWT compilation of it together with the WebFX kit.
 
-NOTE: Note for the impatient: OpenJFX is a huge library (about 10MB) compared to standard JS frameworks (typically 100KB). It will take time to complete its coverage (some parts may not be possible). Thanks for your understanding.
+NOTE: Note for the impatient: OpenJFX is a huge library (about 10MB) compared to standard JS frameworks (typically 100KB). It will take time to complete its coverage. Thanks for your understanding.
 
 === Benefits
 
@@ -94,7 +94,7 @@ digraph {
 
 In addition to the web platform, a WebFX application can also run on desktops & mobiles. WebFX will invoke the standard Java toolchain to produce desktop executables (embedding an optimized JRE), and the Gluon toolchains to produce native executables for the desktop and mobiles.
 
-Some alternative technologies, or JVM language, allow you to do the same but only for the application logic, because they don't offer a cross-platform UI toolkit. With WebFX, you can do a full cross-platform development of your entire application from a single source code base.
+Some alternative technologies or JVM language allow you to do the same but only for the application logic, because they don't offer a cross-platform UI toolkit. With WebFX, you can do a full cross-platform development of your entire application from a single source code base.
 
 ==== Java full-stack
 
@@ -190,7 +190,7 @@ end legend
 <3> This module targets the web platform. It binds your application with the WebFX kit, and can call GWT to produce the web app.
 <4> This module targets the standard desktop platform. It binds your application with the OpenJFX runtime, and is directly executable in your IDE. It can also call the standard Java toolchain to produce the desktop executables (Windows, macOS or Linux) with an embed JRE.
 
-You can create several WebFX applications in the same repository. If your application code grows, you can split your code into more modules. The CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build chain as follows (when applicable to the module):
+You can create several WebFX applications in the same repository. If your application code grows, you can split your code into more modules. The CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build chain as follows:
 
 [.text-center]
 [graphviz, wbfx-cli, format=svg]
@@ -288,7 +288,7 @@ source ~/.bash_profile <2>
 <2> Applying it to the current session
 
 [source,shell,indent=0,role="secondary"]
-.Windows PowerShell
+.Windows (PowerShell)
 ----
 If (!(Test-Path $profile)) { New-Item -Path $profile -Force } <1>
 
@@ -306,7 +306,7 @@ If ($(Get-ExecutionPolicy) -eq "Restricted") { Start-Process powershell -Verb ru
 [source,shell,role="secondary"]
 .Windows (manual)
 ----
-You can just add the webfx-cli repository to your environment path, so webfx.bat will be directly executed when typing the webfx command.
+You can simply add the webfx-cli repository to your environment path, so webfx.bat will be directly executed when typing the webfx command.
 ----
 
 Then you should be able to invoke the CLI from the terminal:
@@ -321,7 +321,7 @@ You can check for update at anytime by running:
 
 If a new version is available, it will download it and build it for you.
 
-NOTE: This is sp far the only command that uses `git` (a `git pull` of the webfx-cli repository). The CLI will not call `git` on your own repositories.
+NOTE: This is so far the only command that uses `git` (a `git pull` of the webfx-cli repository). The CLI will not call `git` on your own repositories.
 
 
 === Creating your first WebFX app
@@ -344,7 +344,7 @@ When we create an application, we pass the fully qualified name of the JavaFX cl
 
  webfx create application --prefix webfx-example org.example.webfxexample.WebFxExampleApplication --helloWorld
 
-TIP: we could omit the prefix here, because the CLI takes the parent module name in that case.
+TIP: we could omit the prefix here, because the CLI takes the parent module name in that case (which is also webfx-example here).
 
 This command created the following modules:
 
@@ -394,7 +394,7 @@ Some builds require the installation of third-party software, as shown in the fo
 
 [cols="1,^1,^1,^1,^1"]
 |===
-| Build platform |Target platform | Install command | | Build option Executable file(s)
+| Build platform |Target platform | Install command | Build option  |Executable file(s)
 
 | Linux, macOS or Windows
 | Web
@@ -498,7 +498,7 @@ TIP: As opposed to `--reveal`, `--locate` works even before the build, as it pri
 
 This executable requires Java installed on the target machine.
 
-You can use the following commands to target the Desktop platform with a fat JAR (you can still use the `--reveal`, `--locate` options in addition):
+You can use the following commands to target the Desktop platform with (JAR):
 
 [source,shell,indent=0,role="primary"]
 .Long syntax
@@ -513,6 +513,8 @@ webfx run --openjfx-fatjar
 webfx build -f
 webfx run -f
 ----
+
+You can of course still use the `--reveal`, `--locate` options in addition.
 
 TIP: You can combine the build options. For example `webfx build --gwt --openjfx-fatjar` (short syntax: `webfx build -gf`) will build both the GWT html and OpenJFX fat jar executables.
 
@@ -555,8 +557,6 @@ webfx run --openjfx-desktop
 webfx build -k
 webfx run -k
 ----
-
- macos: sudo spctl --master-disable
 
 === Desktop platform (native)
 
