--- a/src/main/asciidoc/webfx-docs.adoc
+++ b/src/main/asciidoc/webfx-docs.adoc
@@ -72,13 +72,17 @@ The WebFX kit coverage is for now limited to the essential features of JavaFX. S
 
 When a JavaFX application meets these 2 requirements, we will call it a _WebFX application_, and it can be transpiled to the web simply by running a GWT compilation of it together with the WebFX kit.
 
-NOTE: Note for the impatient: OpenJFX is a huge library (about 10MB) compared to standard JS frameworks (typically 100KB). It may take time to complete its coverage. Thanks for your understanding.
+NOTE: Note for the impatient: OpenJFX is a huge library (about 10MB) compared to standard JS frameworks (typically 100KB).
+It may take time to complete its coverage - please feel free to contribute!
 
 === Benefits
 
 ==== No server
 
-There are already great solutions to run Swing or JavaFX applications in the browser without plugins by actually running them on a server. And these solutions don't have the limitations WebFX currently has. However, a standard self-contained JS packaging is a much more simple, scalable and reliable execution model. This is precisely that benefit that WebFX is offering, and probably the main reason why you would prefer it over the other existing solutions.
+There are already great solutions to run Swing or JavaFX applications in the browser without plugins by actually running them on a server.
+And these solutions don't have the limitations WebFX currently has. However, a standard self-contained JS packaging is a much more simple,
+scalable and reliable execution model. This is precisely the benefit of WebFX, and probably the main reason why you would prefer
+it over the other existing solutions.
 
 ==== Cross-platform
 
@@ -94,11 +98,14 @@ digraph {
 
 In addition to the web platform, a WebFX application can also run on desktops & mobiles. WebFX will invoke the standard Java toolchain to produce desktop executables (embedding an optimized JRE), and the Gluon toolchains to produce native executables for the desktop and mobiles.
 
-Some alternative technologies or JVM language allow you to do the same but only for the application logic, because they don't offer a cross-platform UI toolkit. With WebFX, you can do a full cross-platform development of your entire application from a single source code base.
+Some alternative technologies or JVM languages allow you to do the same but only for the application logic, because they don't offer a cross-platform
+UI toolkit. With WebFX, you can do a full cross-platform development of your entire application from a single-source codebase.
 
 ==== Java full-stack
 
-Writing your whole stack in Java is a big advantage, keeping your environment simple and homogenous from a single Java IDE. Not only you don't need to master other complex ecosystems such as JavaScript or TypeScript, but you can also share the common code between your backend and frontends with the Java module system, a great advantage compared to heterogeneous systems.
+Writing your whole stack in Java is a big advantage, keeping your environment simple and homogenous from a single Java IDE.
+This prevents you from having to master other complex ecosystems such as JavaScript or TypeScript, and also allows you to share common code
+between your backend and frontend using the Java module system - a great advantage compared to heterogeneous systems.
 
 ==== Performance
 
@@ -134,17 +141,16 @@ Despite the big size of OpenJFX, WebFX can produce lightweight web apps, as demo
 
 [small]#* compressed JS size transiting over the network, without eventual images or other resources#
 
-The secret? Here are the 3 main ingredients for this magic:
+The secret? Three things:
 
-* The scene graph -> DOM mapper is much thinner than the original OpenJFX lower layer which has to reimplement many features a browser already has.
-* GWT runs a dead code elimination, which removes the JavaFX classes not used by the WebFX application.
-* GWT produces an amazingly compaq and optimized JS code.
+* The scene graph -> DOM mapper is much thinner than the original OpenJFX lower layer, which has to reimplement many features a browser already has.
+* GWT runs a dead code elimination (tree-shaking) process, which removes the JavaFX classes not used by the WebFX application.
+* GWT produces amazingly compact and optimized JS code, leading to highly-performant web apps.
 
-The later point should also confer an excellent execution speed to your web app.
+==== Gradual learning curve
 
-==== Low learning curve
-
-WebFX is not yet another UI toolkit to learn, but nothing else than the already well known and documented JavaFX API. All the powerful features you love like JavaFX bindings available for your web app. You will just feel at home with WebFX!
+WebFX is not just another UI toolkit to learn - it's an emulation of the well-known and well-documented JavaFX API.
+All the powerful JavaFX features that you know and love are available for your web app. You will feel right at home with WebFX!
 
 ==== Fast development cycles
 
@@ -152,11 +158,11 @@ You don't need to run regular GWT compilations like you would do with a traditio
 
 ==== Free and open source
 
-WebFX is an open source initiative under Apache 2.0 license.
+WebFX is an open source initiative released under Apache 2.0 license.
 
 == Getting started
 
-=== Pre-requisites
+=== Prerequisites
 
 To develop WebFX applications, you will need the following software already installed on your development machine:
 
@@ -190,7 +196,7 @@ end legend
 <3> This module targets the web platform. It binds your application with the WebFX kit, and can call GWT to produce the web app.
 <4> This module targets the standard desktop platform. It binds your application with the OpenJFX runtime, and is directly executable in your IDE. It can also call the standard Java toolchain to produce the desktop executables (Windows, macOS or Linux) with an embed JRE.
 
-You can create several WebFX applications in the same repository. If your application code grows, you can split your code into more modules. The CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build chain as follows:
+You can create several WebFX applications in the same repository. As your application code grows, you can split your code into more modules. The CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build chain as follows:
 
 [.text-center]
 [graphviz, wbfx-cli, format=svg]
@@ -216,11 +222,11 @@ Your inputs will be centralized in the WebFX module files named webfx.xml (same 
 
 This directive is asking the CLI to identify the list of your dependencies from an analysis of your source code, and automatically populate the dependencies in pom.xml, module-info.java, module.gwt.xml, etc...
 
-During that process, the CLI takes care of the cross-platform aspects: when a feature is platform-dependent (a different implementation exists for different platforms), it will pick up the right modules (those whose implementation matches the target platform). This is at this point for example that it will replace the OpenJFX modules with the WebFX kit ones in your GWT application module.
+During that process, the CLI takes care of the cross-platform aspects: when a feature is platform-dependent (a different implementation exists for different platforms), it will pick up the right modules (those whose implementation matches the target platform). It is at this point, for example, that the CLI will replace the OpenJFX modules with the WebFX kit modules in your GWT application module.
 
 === Installing the WebFX CLI
 
-Since we haven't published any release at this stage yet, the way to install the CLI for now is to clone the https://github.com/webfx-project/webfx-cli[webfx-cli] repository, and build it with Maven.
+Since we haven't published an official WebFX release yet, the way to install the CLI for now is to clone the https://github.com/webfx-project/webfx-cli[webfx-cli] repository, and build it with Maven.
 
 NOTE: We will distribute the CLI in a better way with the first WebFX official release.
 
@@ -251,7 +257,7 @@ This generates an executable fat jar in the target folder that we can execute wi
 
  java -jar target/webfx-cli-0.1.0-SNAPSHOT-fat.jar
 
-The `webfx.sh` and `webfx.bat` script files (located under the webfx-cli directory) are simply doing this call. We will use them in the next step.
+The `webfx.sh` and `webfx.bat` script files (located under the webfx-cli directory) are simply executing the same fat jar. We will use them in the next step.
 
 ==== Creating a permanent _webfx_ alias
 
@@ -309,7 +315,7 @@ If ($(Get-ExecutionPolicy) -eq "Restricted") { Start-Process powershell -Verb ru
 You can simply add the webfx-cli repository to your environment path, so webfx.bat will be directly executed when typing the webfx command.
 ----
 
-Then you should be able to invoke the CLI from the terminal:
+Now you should be able to invoke the CLI from the terminal:
 
  webfx --help
 
@@ -336,7 +342,7 @@ Let's create our first WebFX application. We need to create the repository direc
 
 TIP: `webfx init org.example:1.0.0-SNAPSHOT` will also work as the CLI takes the repository directory name as the artifactId when omitted in the command.
 
-The init command creates only 2 files: webfx.xml and pom.xml. If this is the first time you use the CLI, it will download some other files through Maven to get the essential information about the WebFX modules, before completing this job.
+The init command creates only 2 files: webfx.xml and pom.xml. Note that if this is the first time you have used the CLI, it will download some other files through Maven to retrieve essential information about the available WebFX modules.
 
 ==== Creating your application modules
 
@@ -522,7 +528,7 @@ TIP: You can combine the build options. For example `webfx build --gwt --openjfx
 
 As opposed to the JAR, the embed JRE will be specific to the target platform. Therefore, a Linux machine will build a Linux executable, a Mac a macOS executable, and a Windows machine a Windows executable.
 
-*Pre-requisite*: you can install the following software if you wish to also generate the installers:
+*Prerequisite*: you can install the following software if you wish to also generate the installers:
 
 [source,shell,indent=0,role="primary"]
 .Linux
@@ -562,7 +568,7 @@ webfx run -k
 
 Like for the embed JRE, 3 different machines are required to target the Linux, macOS, and Windows executables.
 
-*Pre-requisites*: you must install the following software for a successful build:
+*Prerequisites*: you must install the following software for a successful build:
 
 [source,shell,indent=0,role="primary"]
 .Linux
@@ -589,7 +595,7 @@ webfx install wix <2>
 <1> Required for the Gluon toolchain
 <2> Optional. WiX Toolset is used to create a simple .msi installer.
 
-Then, you can use the following commands to target the Desktop platform (native):
+Then, you can use the below commands to target the Desktop platform (native). #Note that there is a bug in the `gluonfx-maven-plugin` which causes the `build` command below to fail on macOS Big Sur. Details are provided in the Github issue https://github.com/gluonhq/gluonfx-maven-plugin/issues/429[here].#
 
 [source,shell,indent=0,role="primary"]
 .Long syntax
@@ -609,7 +615,7 @@ webfx run -t
 
 A Linux machine is required to build the Android executable.
 
-*Pre-requisites*: you must install the following software for a successful build:
+*Prerequisites*: you must install the following software for a successful build:
 
  webfx install graalvm
  webfx install ubuntu-devtools
@@ -638,7 +644,7 @@ Alternatively, you can use the `--gluon-mobile` (short: `-b`) cross-platform opt
 
 A Mac is required to build the iOS executable.
 
-*Pre-requisite*: you must install the following software for a successful build:
+*Prerequisite*: you must install the following software for a successful build:
 
  webfx install graalvm
 
@@ -664,17 +670,17 @@ Alternatively, you can use the `--gluon-mobile` (short: `-b`) cross-platform opt
 
 === GitHub workflows
 
-We plan to add the automatic generation of GitHub workflows to the CLI. This will allow you to use the GitHub servers to automatically generate the different executables for the different platforms on each push on the main branch.
+In a future release of the CLI we plan to support automatic generation of GitHub workflows. Each push to the main branch of your project will then trigger the generation of all your executables on the GitHub servers.
 
-For now, you can check out the demos to see how these GitHub workflows look like, and what executables they generate. For example, here is the link:https://github.com/webfx-demos/webfx-demo-fx2048/blob/main/.github/workflows/builds.yml[FX2048 GitHub workflow] and the link:https://github.com/webfx-demos/webfx-demo-fx2048/releases[generated executable^] (just expand the release Assets to see them).
+For now, you can check out the demos to see sample GitHub workflow configuration. For example, the link:https://github.com/webfx-demos/webfx-demo-fx2048/blob/main/.github/workflows/builds.yml[FX2048 GitHub workflow] and the link:https://github.com/webfx-demos/webfx-demo-fx2048/releases[generated executables^] (expand the `Assets` link to view them).
 
 === Developing in your IDE
 
-We will give the instructions for IntelliJ IDEA, but you can easily transpose them to other Java IDEs.
+Instructions for IntelliJ IDEA are provided below, which can be quite easily transposed into other Java IDEs.
 
 ==== Opening the project
 
-Open the webfx-example directory from your Java IDE. It will recognize it as a Maven project, and import it.
+Open the webfx-example directory from your Java IDE. It should recognize the directory as a Maven project, and import it.
 
 ==== Building and running the OpenJFX application
 
@@ -687,18 +693,20 @@ image::idea-config-webfx-example.png[]
 
 TIP: You can just type `AB` for the main class, and your IDE should quickly find and suggest the WebFX ApplicationBooter class.
 
-The way to boot GWT and OpenJFX applications are different, but WebFX offers a cross-platform way to do it. For this reason, #the main class of a WebFX application is always [red monospace]+dev.webfx.platform.shared.services.boot.ApplicationBooter+#. It will find your JavaFX application because it has been automatically declared as a Java service by the CLI.
+The way to boot GWT and OpenJFX applications is different, but WebFX offers a cross-platform way to do it. For this reason, #the main class of a WebFX application is always [red monospace]+dev.webfx.platform.shared.services.boot.ApplicationBooter+#. It will find your JavaFX application because it has been automatically declared as a Java service by the CLI.
 
 [NOTE]
 ====
-GWT normally doesn't support the Java service API, but WebFX does, because the CLI emulates it by generating a GWT super source. You can rely on this feature to declare and implement your own services. Your services can even have platform-dependent implementations. A service can be a cross-platform UI API for example, with an OpenJFX implementation, and a different GWT implementation using a JS library you want for your web app.
+GWT normally doesn't support the Java service API, but WebFX does, because the CLI emulates it by generating a GWT super source. You can rely on this feature to declare and implement your own services. Your services can even have platform-dependent implementations. A service can be a cross-platform UI API for example, with an OpenJFX implementation, and a different GWT implementation using the JS library you want for your web app.
 ====
 
-If you run this configuration, it will build and run your WebFX application in your IDE with the OpenJFX runtime. This is this configuration that you will use to develop and debug your application.
+If you run this configuration, it will build and run your WebFX application in your IDE using the OpenJFX runtime. This is the configuration that you will use to develop and debug your application.
 
 ==== Building and running the GWT application
 
 ==== Making changes
+
+Use the following command to update the build chain from the webfx.xml files. For example:
 
  webfx update
 
