improved future vision

--- a/src/main/asciidoc/webfx-docs.adoc
+++ b/src/main/asciidoc/webfx-docs.adoc
@@ -72,7 +72,7 @@ The WebFX kit coverage is for now limited to the essential features of JavaFX. S
 
 When a JavaFX application meets these 2 requirements, we will call it a _WebFX application_, and it can be transpiled to the web simply by running a GWT compilation of it together with the WebFX kit.
 
-NOTE: Note for the impatient: OpenJFX is a huge library (about 10MB) compared to standard JS frameworks (typically 100KB). It may take time to complete its coverage. Thanks for your understanding.
+NOTE: Note for the impatient: OpenJFX is a huge library (about 10MB) compared to standard JS frameworks (typically 100KB). It may take some time to complete its coverage - thank you for your understanding. In the near future we hope to release a set of contributor guidelines and will endeavour to build an online community of developers around the project.
 
 === Benefits
 
